--- a/package.json
+++ b/package.json
@@ -21,16 +21,16 @@
     "license": "ISC",
     "homepage": "https://bitbucket.org/calmisland/kidsloop-px#readme",
     "peerDependencies": {
-        "@material-ui/core": "^4.11.3",
-        "@material-ui/icons": "^4.11.2",
-        "@material-ui/lab": "^4.0.0-alpha.57",
+        "@material-ui/core": "^4.0.0",
+        "@material-ui/icons": "^4.0.0",
+        "@material-ui/lab": "4.0.0-alpha.58",
         "@types/react": "^16.0.0 || ^17.0.0",
         "@types/react-dom": "^16.0.0 || ^17.0.0",
         "@types/react-router-dom": "^5.1.7",
         "@types/styled-components": "^5.1.7",
         "react": "^16.0.0 || ^17.0.0",
         "react-dom": "^16.0.0 || ^17.0.0",
-        "styled-components": "^5.2.1",
+        "styled-components": "^5.0.0",
         "styled-icons": "^10.28.0"
     },
     "devDependencies": {
@@ -60,7 +60,7 @@
         "@webpack-cli/serve": "1.3.0",
         "babel-loader": "8.2.2",
         "clean-webpack-plugin": "^3.0.0",
-        "copy-webpack-plugin": "7.0.0",
+        "copy-webpack-plugin": "^7.0.0",
         "css-loader": "^5.2.4",
         "css-modules-typescript-loader": "^4.0.1",
         "eslint": "^7.26.0",
@@ -69,31 +69,31 @@
         "eslint-plugin-modules-newline": "^0.0.6",
         "eslint-plugin-putout": "^7.5.0",
         "eslint-plugin-react": "^7.23.2",
-        "eslint-plugin-simple-import-sort": "7.0.0",
-        "file-loader": "6.2.0",
-        "fork-ts-checker-webpack-plugin": "6.1.0",
-        "html-webpack-plugin": "5.3.1",
+        "eslint-plugin-simple-import-sort": "^7.0.0",
+        "file-loader": "^6.2.0",
+        "fork-ts-checker-webpack-plugin": "^6.1.0",
+        "html-webpack-plugin": "^5.3.1",
         "jest": "^26.6.3",
         "putout": "^17.1.0",
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
         "style-loader": "^2.0.0",
         "ts-jest": "^26.5.6",
-        "ts-node": "9.1.1",
-        "typescript": "4.2.4",
+        "ts-node": "^9.1.1",
+        "typescript": "^4.2.4",
         "webpack": "5.24.1",
         "webpack-cli": "4.5.0",
-        "webpack-dev-server": "3.11.2",
-        "webpack-node-externals": "2.5.2"
+        "webpack-dev-server": "^3.11.2",
+        "webpack-node-externals": "^2.5.2"
     },
     "dependencies": {
         "clsx": "^1.1.1",
         "lodash": "^4.17.21",
         "node-source-han-sans-sc": "^1.1.0-2.001R",
         "notistack": "^1.0.7",
-        "papaparse": "5.3.0",
+        "papaparse": "^5.3.0",
         "react-cookie": "^4.0.3",
-        "react-dropzone": "11.3.2",
+        "react-dropzone": "^11.3.2",
         "typeface-nanum-square-round": "^1.0.2"
     }
 }
