--- a/package.json
+++ b/package.json
@@ -11,8 +11,7 @@
         "build:sb": "build-storybook",
         "start:sb": "start-storybook -p 6006",
         "test": "jest",
-        "lint": "eslint . --fix",
-        "preversion": "git checkout master && git pull origin master && npm ci",
+        "lint": "eslint .",
         "version": "npm run build && git add -A dist",
         "postversion": "git push && git push --tags"
     },
@@ -30,7 +29,6 @@
         "@material-ui/lab": "^4.0.0-alpha.0",
         "@types/react": "^16.0.0 || ^17.0.0",
         "@types/react-dom": "^16.0.0 || ^17.0.0",
-        "@types/react-router-dom": "^5.1.7",
         "@types/styled-components": "^5.1.7",
         "react": "^16.0.0 || ^17.0.0",
         "react-dom": "^16.0.0 || ^17.0.0",
@@ -38,17 +36,20 @@
         "styled-icons": "^10.28.0"
     },
     "devDependencies": {
-        "@babel/core": "7.14.0",
-        "@babel/plugin-proposal-class-properties": "7.13.0",
-        "@babel/plugin-proposal-object-rest-spread": "7.13.8",
-        "@babel/preset-env": "7.14.1",
-        "@babel/preset-react": "7.13.13",
-        "@babel/preset-typescript": "7.13.0",
+        "@babel/core": "7.16.0",
+        "@babel/plugin-proposal-class-properties": "7.16.0",
+        "@babel/plugin-proposal-object-rest-spread": "7.16.0",
+        "@babel/plugin-transform-typescript": "7.16.1",
+        "@babel/preset-env": "7.16.4",
+        "@babel/preset-react": "7.16.0",
+        "@babel/preset-typescript": "7.16.0",
+        "@kidsloop/eslint-config": "bitbucket:calmisland/kidsloop-eslint-config#1.4.1",
         "@storybook/addon-actions": "^6.2.0-rc.7",
         "@storybook/addon-essentials": "^6.2.0-rc.7",
         "@storybook/addon-links": "^6.2.0-rc.7",
         "@storybook/addons": "^6.2.0-rc.8",
         "@storybook/builder-webpack5": "^6.2.0-rc.7",
+        "@storybook/manager-webpack5": "^6.3.4",
         "@storybook/react": "^6.2.0-rc.7",
         "@storybook/theming": "^6.2.0-rc.8",
         "@testing-library/jest-dom": "5.11.9",
@@ -61,44 +62,34 @@
         "@types/papaparse": "5.2.5",
         "@types/react-color": "3.0.4",
         "@types/testing-library__jest-dom": "5.9.5",
-        "@typescript-eslint/eslint-plugin": "4.23.0",
-        "@typescript-eslint/parser": "4.23.0",
         "@webpack-cli/serve": "1.3.0",
-        "babel-loader": "8.2.2",
+        "babel-loader": "8.2.3",
         "clean-webpack-plugin": "^3.0.0",
         "copy-webpack-plugin": "^7.0.0",
         "css-loader": "^5.2.4",
         "css-modules-typescript-loader": "^4.0.1",
-        "eslint": "^7.26.0",
-        "eslint-plugin-import": "^2.22.1",
-        "eslint-plugin-jest": "^24.3.6",
-        "eslint-plugin-modules-newline": "^0.0.6",
-        "eslint-plugin-putout": "^7.5.0",
-        "eslint-plugin-react": "^7.23.2",
-        "eslint-plugin-simple-import-sort": "^7.0.0",
+        "eslint": "8.2.0",
         "file-loader": "^6.2.0",
         "fork-ts-checker-webpack-plugin": "^6.1.0",
         "html-webpack-plugin": "^5.3.1",
         "jest": "^26.6.3",
-        "putout": "^17.1.0",
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
         "style-loader": "^2.0.0",
         "ts-jest": "^26.5.6",
         "ts-node": "^9.1.1",
-        "typescript": "^4.2.4",
+        "typescript": "4.5.2",
         "webpack": "5.24.1",
         "webpack-cli": "4.5.0",
         "webpack-dev-server": "^3.11.2",
         "webpack-node-externals": "^2.5.2"
     },
     "dependencies": {
-        "@storybook/manager-webpack5": "^6.3.4",
         "clsx": "^1.1.1",
         "lodash": "^4.17.21",
         "node-source-han-sans-sc": "^1.1.0-2.001R",
-        "papaparse": "^5.3.0",
         "notistack": "1.0.6",
+        "papaparse": "^5.3.0",
         "react-color": "2.19.3",
         "react-cookie": "^4.0.3",
         "react-dropzone": "^11.3.2",
