--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "kidsloop-px",
+    "name": "@kl-engineering/kidsloop-px",
     "version": "1.10.2",
     "private": true,
     "description": "KidsLoop Product Experience UI Library",
@@ -13,17 +13,17 @@
         "start:sb": "start-storybook -p 6006",
         "test": "jest",
         "lint": "eslint .",
-        "release": "standard-version -t ''",
+        "release": "standard-version -a",
         "prepare": "husky install"
     },
     "repository": {
         "type": "git",
-        "url": "git+ssh://git@bitbucket.org/calmisland/kidsloop-px.git"
+        "url": "git+https://github.com/KL-Engineering/kidsloop-px"
     },
     "keywords": [],
     "author": "KidsLoop",
     "license": "ISC",
-    "homepage": "https://bitbucket.org/calmisland/kidsloop-px#readme",
+    "homepage": "+https://github.com/KL-Engineering/kidsloop-px#readme",
     "peerDependencies": {
         "@material-ui/core": "^4.12.3",
         "@material-ui/icons": "^4.0.0",
@@ -53,7 +53,7 @@
         "@babel/preset-typescript": "7.16.0",
         "@commitlint/cli": "16.1.0",
         "@commitlint/config-conventional": "16.0.0",
-        "@kidsloop/eslint-config": "bitbucket:calmisland/kidsloop-eslint-config#1.4.1",
+        "@kl-engineering/eslint-config": "2.0.3",
         "@storybook/addon-actions": "^6.2.0-rc.7",
         "@storybook/addon-essentials": "^6.2.0-rc.7",
         "@storybook/addon-links": "^6.2.0-rc.7",
