--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     },
     "repository": {
         "type": "git",
-        "url": "git+ssh://git@bitbucket.org/calmisland/kidsloop-px.git"
+        "url": "git+https://github.com/KL-Engineering/kidsloop-px.git"
     },
     "keywords": [],
     "author": "KidsLoop",
