--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,7 +11,6 @@
         "noImplicitAny": true,
         "outDir": "./dist",
         "removeComments": true,
-        "rootDir": "./",
         "baseUrl": "./",
         "skipLibCheck": true,
         "strict": true,
@@ -25,15 +24,13 @@
     },
     "include": [
         ".eslintrc.js",
-        "**/*js",
-        "**/*jsx",
-        "**/*ts",
-        "**/*tsx"
+        "**/*.js",
+        "**/*.jsx",
+        "**/*.ts",
+        "**/*.tsx"
     ],
     "exclude": [
         "node_modules",
-        "dist",
-        "src/**/*.test.ts",
-        "src/**/*.test.tsx"
+        "dist"
     ]
 }
