--- a/.npmignore
+++ b/.npmignore
@@ -1,12 +1,18 @@
+# Config files
 .babelrc
 .eslintignore
 .eslintrc.js
 .gitattributes
 .gitignore
+.versionrc.js
 jest.config.ts
 setupTests.ts
 tsconfig.eslint.json
 tsconfig.json
 webpack.config.js
+
+# Storybook
 .storybook
+
+# Packages
 node_modules
