--- a/package.json
+++ b/package.json
@@ -30,8 +30,8 @@
         "@material-ui/icons": "^4.0.0",
         "@material-ui/lab": "^4.0.0-alpha.0",
         "@mui/icons-material": "^5.2.0",
-        "@mui/lab": "^5.0.0-alpha.56",
-        "@mui/material": "^5.2.0",
+        "@mui/lab": "^5.0.0-alpha.77",
+        "@mui/material": "^5.6.1",
         "@mui/styles": "^5.2.0",
         "@types/react": "^17.0.0",
         "@types/react-dom": "^17.0.0",
@@ -97,6 +97,8 @@
         "webpack-node-externals": "^2.5.2"
     },
     "dependencies": {
+        "@date-io/dayjs": "^2.13.1",
+        "@mui/x-date-pickers": "^5.0.0-alpha.0",
         "clsx": "^1.1.1",
         "lodash": "^4.17.21",
         "node-source-han-sans-sc": "^1.1.0-2.001R",
