--- a/.github/workflows/bump-version.yml
+++ b/.github/workflows/bump-version.yml
@@ -12,6 +12,16 @@ on:
                 required: false
                 type: string
                 default: ''
+            release_as:
+                required: true
+                type: choice
+                default: auto
+                description: If you want an automated or a manual version bump
+                options:
+                - auto
+                - major
+                - minor
+                - patch
 
 jobs:
     confirm-version-generation:
@@ -30,5 +40,8 @@ jobs:
     generate-version:
         needs: [install]
         uses: KL-Engineering/github-action-workflows/.github/workflows/npm-generate-version.yml@v3.1.1
+        with:
+            prerelease: ${{ github.event.inputs.prerelease }}
+            release_as: ${{ github.event.inputs.release_as }}
         secrets:
             NODE_AUTH_TOKEN: ${{ secrets.PACKAGES_TOKEN }}
