--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
         "build": "npm run build:js && npm run build:types",
         "build:js": "webpack",
         "build:types": "tsc --emitDeclarationOnly",
-        "build2": "rollup -c",
+        "build2": "rollup -c --context window",
         "build:sb": "build-storybook",
         "start:sb": "start-storybook -p 6006",
         "test": "jest",
@@ -47,6 +47,7 @@
         "@rollup/plugin-commonjs": "22.0.0",
         "@rollup/plugin-node-resolve": "13.2.1",
         "@rollup/plugin-replace": "4.0.0",
+        "@rollup/plugin-typescript": "^8.3.2",
         "@rushstack/eslint-patch": "1.1.3",
         "@storybook/addon-actions": "^6.2.0-rc.7",
         "@storybook/addon-essentials": "^6.2.0-rc.7",
