--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,7 +8,7 @@
         "resolveJsonModule": true,
         "strictNullChecks": true,
         "jsx": "react-jsx",
-        "module": "CommonJS",
+        "module": "esnext",
         "moduleResolution": "Node",
         "lib": [
             "DOM",
