--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
         "build": "npm run build:js && npm run build:types",
         "build:js": "webpack",
         "build:types": "tsc --emitDeclarationOnly",
-        "build2": "rollup -c",
+        "build2": "rollup -c --context window",
         "build:sb": "build-storybook",
         "start:sb": "start-storybook -p 6006",
         "test": "jest",
@@ -47,6 +47,7 @@
         "@rollup/plugin-commonjs": "22.0.0",
         "@rollup/plugin-node-resolve": "13.2.1",
         "@rollup/plugin-replace": "4.0.0",
+        "@rollup/plugin-typescript": "8.3.2",
         "@rushstack/eslint-patch": "1.1.3",
         "@storybook/addon-actions": "^6.2.0-rc.7",
         "@storybook/addon-essentials": "^6.2.0-rc.7",
@@ -66,6 +67,7 @@
         "@types/papaparse": "5.2.5",
         "@types/react-color": "3.0.4",
         "@types/testing-library__jest-dom": "5.9.5",
+        "@types/webpack": "4.41.32",
         "@types/webpack-bundle-analyzer": "4.4.1",
         "@types/webpack-node-externals": "2.5.3",
         "@webpack-cli/serve": "1.6.1",
@@ -83,8 +85,10 @@
         "react-dom": "^17.0.2",
         "rollup": "2.70.2",
         "rollup-plugin-babel": "4.4.0",
+        "rollup-plugin-esbuild": "4.9.1",
         "rollup-plugin-node-polyfills": "0.2.1",
         "rollup-plugin-peer-deps-external": "2.2.4",
+        "rollup-plugin-polyfill-node": "0.9.0",
         "rollup-plugin-postcss": "4.0.2",
         "rollup-plugin-terser": "7.0.2",
         "rollup-plugin-typescript2": "0.31.2",
@@ -105,7 +109,7 @@
         "@emotion/styled": "^11.6.0",
         "@mui/icons-material": "^5.2.0",
         "@mui/lab": "^5.0.0-alpha.77",
-        "@mui/material": "^5.6.1",
+        "@mui/material": "~5.5.3",
         "@mui/styles": "^5.2.0",
         "@mui/x-date-pickers": "^5.0.0-alpha.0",
         "clsx": "^1.1.1",
