--- a/package.json
+++ b/package.json
@@ -26,91 +26,86 @@
     "homepage": "https://github.com/KL-Engineering/kidsloop-px#readme",
     "peerDependencies": {
         "@emotion/react": "^11.6.0",
-        "@emotion/styled": "^11.6.0",
+        "@emotion/styled": "^11.6.1",
         "@mui/icons-material": "^5.2.0",
-        "@mui/lab": "^5.0.0-alpha.77",
-        "@mui/material": "^5.6.1",
+        "@mui/lab": "5.0.0-alpha.84",
+        "@mui/material": "^5.2.1",
         "@mui/styles": "^5.2.0",
-        "@types/react": "^17.0.0",
-        "@types/react-dom": "^17.0.0",
-        "@types/react-router-dom": "^5.1.7",
-        "@types/styled-components": "^5.1.7",
-        "react": "^17.0.0",
-        "react-dom": "^17.0.0",
-        "styled-components": "^5.0.0",
-        "styled-icons": "^10.28.0"
+        "@types/react": "^17.0.45",
+        "@types/react-dom": "^17.0.17",
+        "react": "^17.0.2",
+        "react-dom": "^17.0.2"
     },
     "devDependencies": {
-        "@babel/core": "7.16.0",
-        "@babel/plugin-proposal-class-properties": "7.16.0",
-        "@babel/plugin-proposal-object-rest-spread": "7.16.0",
-        "@babel/plugin-transform-typescript": "7.16.1",
-        "@babel/preset-env": "7.16.4",
-        "@babel/preset-react": "7.16.0",
-        "@babel/preset-typescript": "7.16.0",
-        "@commitlint/cli": "16.1.0",
-        "@commitlint/config-conventional": "16.0.0",
+        "@babel/core": "7.18.2",
+        "@babel/plugin-proposal-class-properties": "7.17.12",
+        "@babel/plugin-proposal-object-rest-spread": "7.18.0",
+        "@babel/plugin-transform-typescript": "7.18.4",
+        "@babel/preset-env": "7.18.2",
+        "@babel/preset-react": "7.17.12",
+        "@babel/preset-typescript": "7.17.12",
+        "@commitlint/cli": "17.0.2",
+        "@commitlint/config-conventional": "17.0.2",
         "@kl-engineering/eslint-config": "2.0.3",
-        "@rushstack/eslint-patch": "1.1.1",
-        "@storybook/addon-actions": "^6.2.0-rc.7",
-        "@storybook/addon-essentials": "^6.2.0-rc.7",
-        "@storybook/addon-links": "^6.2.0-rc.7",
-        "@storybook/addons": "^6.2.0-rc.8",
-        "@storybook/builder-webpack5": "^6.2.0-rc.7",
-        "@storybook/manager-webpack5": "^6.3.4",
-        "@storybook/react": "^6.2.0-rc.7",
-        "@storybook/theming": "^6.2.0-rc.8",
+        "@rushstack/eslint-patch": "1.1.3",
+        "@storybook/addon-actions": "^6.5.7",
+        "@storybook/addon-essentials": "^6.5.7",
+        "@storybook/addon-links": "^6.5.7",
+        "@storybook/addons": "^6.5.7",
+        "@storybook/builder-webpack5": "^6.5.7",
+        "@storybook/manager-webpack5": "^6.5.7",
+        "@storybook/react": "^6.5.7",
+        "@storybook/theming": "^6.5.7",
         "@svgr/webpack": "6.2.1",
-        "@testing-library/jest-dom": "5.11.9",
-        "@testing-library/react": "11.2.6",
+        "@testing-library/jest-dom": "5.16.4",
+        "@testing-library/react": "12.1.5",
         "@testing-library/react-hooks": "^7.0.1",
-        "@testing-library/user-event": "13.1.8",
+        "@testing-library/user-event": "14.2.0",
         "@types/dotenv": "8.2.0",
-        "@types/jest": "26.0.23",
-        "@types/lodash": "4.14.168",
-        "@types/node": "15.0.2",
-        "@types/papaparse": "5.2.5",
-        "@types/react-color": "3.0.4",
-        "@types/testing-library__jest-dom": "5.9.5",
-        "@webpack-cli/serve": "1.3.0",
+        "@types/jest": "28.1.1",
+        "@types/lodash": "4.14.182",
+        "@types/node": "17.0.40",
+        "@types/papaparse": "5.3.2",
+        "@types/react-color": "3.0.6",
+        "@types/testing-library__jest-dom": "5.14.3",
+        "@webpack-cli/serve": "1.6.1",
         "axios": "0.27.2",
-        "babel-loader": "8.2.3",
-        "clean-webpack-plugin": "^3.0.0",
-        "copy-webpack-plugin": "^7.0.0",
-        "css-loader": "^5.2.4",
+        "babel-loader": "8.2.5",
+        "clean-webpack-plugin": "^4.0.0",
+        "copy-webpack-plugin": "^11.0.0",
+        "css-loader": "^6.7.1",
         "css-modules-typescript-loader": "^4.0.1",
-        "dotenv": "16.0.0",
-        "eslint": "8.2.0",
+        "dotenv": "16.0.1",
+        "eslint": "8.17.0",
         "file-loader": "^6.2.0",
-        "fork-ts-checker-webpack-plugin": "^6.1.0",
-        "html-webpack-plugin": "^5.3.1",
-        "husky": "^7.0.0",
-        "jest": "^26.6.3",
-        "react": "^17.0.2",
-        "react-dom": "^17.0.2",
-        "standard-version": "9.3.2",
-        "style-loader": "^2.0.0",
-        "ts-jest": "^26.5.6",
-        "ts-node": "^9.1.1",
-        "typescript": "4.5.2",
+        "fork-ts-checker-webpack-plugin": "^7.2.11",
+        "html-webpack-plugin": "^5.5.0",
+        "husky": "^8.0.1",
+        "jest": "^28.1.1",
+        "jest-environment-jsdom": "28.1.1",
+        "standard-version": "9.5.0",
+        "style-loader": "^3.3.1",
+        "ts-jest": "^28.0.4",
+        "ts-node": "^10.8.1",
+        "typescript": "4.7.3",
         "url-loader": "4.1.1",
-        "webpack": "5.24.1",
-        "webpack-cli": "4.5.0",
-        "webpack-dev-server": "^3.11.2",
-        "webpack-node-externals": "^2.5.2"
+        "webpack": "5.73.0",
+        "webpack-cli": "4.9.2",
+        "webpack-dev-server": "^4.9.2",
+        "webpack-node-externals": "^3.0.0"
     },
     "dependencies": {
         "clsx": "^1.1.1",
         "lodash": "^4.17.21",
         "node-source-han-sans-sc": "^1.1.0-2.001R",
-        "notistack": "2.0.3",
-        "papaparse": "^5.3.0",
+        "notistack": "2.0.5",
+        "papaparse": "^5.3.2",
         "react-color": "2.19.3",
-        "react-cookie": "^4.0.3",
-        "react-dropzone": "^11.3.2",
-        "react-easy-crop": "^3.5.1",
-        "react-resize-detector": "^7.0.0",
+        "react-cookie": "^4.1.1",
+        "react-dropzone": "^14.2.1",
+        "react-easy-crop": "^4.2.0",
+        "react-resize-detector": "^7.1.1",
         "typeface-nanum-square-round": "^1.0.2",
-        "use-debounce": "^6.0.1"
+        "use-debounce": "^8.0.1"
     }
 }
