--- a/package.json
+++ b/package.json
@@ -50,7 +50,7 @@
         "@babel/preset-typescript": "7.16.0",
         "@commitlint/cli": "16.1.0",
         "@commitlint/config-conventional": "16.0.0",
-        "@kl-engineering/eslint-config": "2.0.3",
+        "@kl-engineering/eslint-config": "3.0.1",
         "@rushstack/eslint-patch": "1.1.1",
         "@storybook/addon-actions": "^6.2.0-rc.7",
         "@storybook/addon-essentials": "^6.2.0-rc.7",
@@ -80,19 +80,20 @@
         "css-loader": "^5.2.4",
         "css-modules-typescript-loader": "^4.0.1",
         "dotenv": "16.0.0",
-        "eslint": "8.2.0",
+        "eslint": "8.17.0",
         "file-loader": "^6.2.0",
         "fork-ts-checker-webpack-plugin": "^6.1.0",
         "html-webpack-plugin": "^5.3.1",
         "husky": "^7.0.0",
-        "jest": "^26.6.3",
+        "jest": "^28.1.1",
+        "jest-environment-jsdom": "28.1.1",
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
         "standard-version": "9.3.2",
         "style-loader": "^2.0.0",
-        "ts-jest": "^26.5.6",
-        "ts-node": "^9.1.1",
-        "typescript": "4.5.2",
+        "ts-jest": "^28.0.4",
+        "ts-node": "^10.8.1",
+        "typescript": "4.7.3",
         "url-loader": "4.1.1",
         "webpack": "5.24.1",
         "webpack-cli": "4.5.0",
